# Chinese-Native-Language-Identification

./: .gitignore  README.md  analysis.py  analysis_ablation.py  analysis_discussion.py  config.py  data_loader.py  evaluate.py  pyproject.toml  scope.md  train_baselines.py  train_neural.py  train_probe.py  train_probe_all.py  train_svm.py  train_transformer.py
JCLCv2/: F00001.txt  F00002.txt  F00003.txt  F00004.txt  F00005.txt  F00006.txt  F00007.txt  F00008.txt  F00009.txt  F00010.txt  F00011.txt  F00012.txt  F00013.txt  F00014.txt  F00015.txt  F00016.txt  F00017.txt  F00018.txt  F00019.txt  F00020.txt  F00021.txt  F00022.txt  F00023.txt  F00024.txt  F00025.txt  F00026.txt  F00027.txt  F00028.txt  F00029.txt  F00030.txt  F00031.txt  F00032.txt  F00033.txt  F00034.txt  F00035.txt  F00036.txt  F00037.txt  F00038.txt  F00039.txt  F00040.txt  (+8489 more)
data/: radical_map.json
features/: __init__.py  dependency.py  discourse.py  function_words.py  lexical_richness.py  ngrams.py  particles.py  pos_ngrams.py  pos_tags.py  radicals.py  segmentation.py
jobs/: train_neural.sh  train_probe.sh  train_svm.sh  train_transformer.sh
logs/: nli-neural_3142001.err  nli-neural_3142001.out  nli-neural_3142025.err  nli-neural_3142025.out  nli-transformer_3142017.err  nli-transformer_3142017.out
models/: neural.py  svm.py  transformer.py
notebooks/: finetune_transformer.ipynb  probe_all.ipynb  train_svm.ipynb
results/: context_distribution.tex  corpus_overview.tex  language_context_crosstab.tex  language_distribution.tex  language_distribution_tikz.tex  length_by_language_tikz.tex  (+18 more)
