[project]
name = "nnp-nli"
version = "0.1.0"
description = "Native Language Identification on Chinese learner texts (JCLCv2)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
    "scikit-learn>=1.3",
    "jieba>=0.42",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "numpy>=1.24",
    "scipy>=1.10",
    "black>=26.1.0",
]
